<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelegramFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_liner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5A8FBB"
            app:title=" " />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="#5A8FBB"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_liner_user"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/avatar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_liner_name_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_name_user_text"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_liner_is_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/tv_is_online_text"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/add_liner_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="335dp"
            android:layout_marginTop="-35dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/addphoto1"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/tv_liner_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-10dp"
            android:text="@string/tv_account_text"
            android:textColor="#67AECC"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_liner_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/tv_phone_number_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_liner_change_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/tap_to_change_phone_number_text"
            android:textColor="#808080"
            android:textSize="16sp" />

        <View
            android:id="@+id/baseline1_liner"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_liner_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/_16din"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/tv_liner_user_name_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/tv_user_name_description_text"
            android:textColor="#808080"
            android:textSize="16sp" />

        <View
            android:id="@+id/baseline2_liner"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="#F0F0F0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_icon_bio"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_sun" />

            <TextView
                android:id="@+id/tv_liner_bio_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="15dp"
                android:text="@string/tv_bio_description_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_liner_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/bio_text"
            android:textColor="#808080"
            android:textSize="16sp" />

        <View
            android:id="@+id/baseline3_liner"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="10dp"
            android:background="#F0F0F0" />

        <TextView
            android:id="@+id/tv_liner_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/settings_text"
            android:textColor="#67AECC"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_liner_notification"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/ic_notification" />

            <TextView
                android:id="@+id/tv_liner_notification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:text="@string/notification_text"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_liner_privacy"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/ic_pricacy" />

            <TextView
                android:id="@+id/tv_liner_privacy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:text="@string/privacy_text"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/baseline_Under_Privacy"
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_liner_data_storage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/ic_rime" />

            <TextView
                android:id="@+id/tv_liner_data_storage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:text="@string/data_and_storage_text"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_liner_chat_settings"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/ic_chat" />

            <TextView
                android:id="@+id/tv_liner_chat_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:text="@string/chat_settings_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:id="@+id/baseline_under_chat_settings"
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_liner_chat_folders"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/ic_folders" />

            <TextView
                android:id="@+id/tv_liner_chat_folders"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:text="@string/chat_folders_text"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_liner_devices"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/ic_devices" />

            <TextView
                android:id="@+id/tv_liner_devices"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:text="@string/devices_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:id="@+id/baseline_liner_under_devices"
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>
</ScrollView>